# AI-army-navy-and-airforce

./: AerospaceSimulation.py  Applications.md  MilitaryElectronics.sql  Negative energy in Physics.md  README.md  SAFETY.md  超音速導彈 物理 python.md
.github/workflows/: codeql.yml
SAFER/: AnalyticsSystem.py  Cargo.toml  README.md  RadioInterferenceAnalysis.c  SAFER.mmd  SafetyManagementSystem.c  SafetyManagementSystem.py
SAFER/Analog/: AnalogSystemAnalysis.py  AnalogSystemStabilityAnalysis.m  SAFER.m  SAFERCircuitDesigner.cs  Smith ChartAnalysiswithRFStability.m
SAFER/C#/Unity/VR/: SAFEROpenVRManager.cs  SAFERVRTrainingEnvironment.cs
SAFER/C#/Unity/XR/: SAFEROpenXRSystem.cs  SAFERVirtualEnvironment.cs
SAFER/C++/VR/: safer.cpp  safer.hpp
SAFER/C/Safety/: RadioInterferenceAnalysis.c  SafetyManagementSystem.c  api_server.h  database.c  database.h  radio_interference.c  radio_interference.h  safer.c  safer.h
SAFER/Navy/: NavalSafetyProgramSystem.rs  SCUBA.rs
SAFER/Python/: SafetyMonitor.py
SAFER/Rust/: Cargo.toml  api.rs  db.rs  energy.rs  error.rs  main.rs  radio.rs
SAFER/Verilog/: environmental_processor.v  flight_data_processor.v  maintance_processor.v  personnel_processor.v  safer_asic.v
SAFER/migrations/: 20240207_initial.sql
